--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,13 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
+@import './mixin';
+@import './reset';
+@import './hero-header';
+@import './products';
+@import './about';
+@import './advantages';
+@import './gallery';
+@import './customer-reviews';
+@import './contacts';
+@import './footer';
