--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 // Стили для файла с примером HTML-фрагмента
 @import './example';
 @import './mixin';
+@import './container';
 @import './reset';
 @import './hero-header';
 @import './products';
