--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,8 @@
 @import './mixin';
 @import './container';
 @import './reset';
-@import './hero-header';
+@import './header';
+@import './hero';
 @import './products';
 @import './about';
 @import './advantages';
