--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -17,5 +17,5 @@ $mobilebgMenu: #e17992;
 $cardsShadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
 $mobilemenuShadow: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
 
-$animationTime: 250ms;
-$animationFunction: cubic-bezier(0.4, 0, 0.2, 1);
+
+$animationFunction: 250ms cubic-bezier(0.4, 0, 0.2, 1);
