--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -18,4 +18,4 @@ $cardsShadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
 $mobilemenuShadow: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
 
 
-$animationFunction: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+$animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
