--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,3 +1,14 @@
 body {
     font-family: 'DM Sans', sans-serif; 
 }
+
+.visually-hiden { /*--- Скрывает элементы----*/
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
