--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -16,13 +16,13 @@
   <ul>
     <li class=""><a class="" href=""><svg width="32" height="32">
           <use href="./images/symbol-defs.svg#icon-footer-github"></use>
-        </svg>/a></li>
+        </svg></a></li>
     <li class=""><a class="" href=""><svg width="32" height="32">
           <use href="./images/symbol-defs.svg#icon-footer-telegram"></use>
-        </svg>/a></li>
+        </svg></a></li>
     <li class=""><a class="" href=""><svg width="32" height="32">
           <use href="./images/symbol-defs.svg#icon-footer-facebook"></use>
-        </svg>/a></li>
+        </svg></a></li>
   </ul>
 
   <address><a href="tel:+61s(0)383766284"></a>Feel free to contact +61 (0) 383 766 284</address>
