--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -2,7 +2,7 @@ body {
     font-family: 'DM Sans', sans-serif; 
 }
 
-.visually-hiden { /*--- Скрывает элементы----*/
+.visually-hidden { /*--- Скрывает элементы----*/
     position: absolute;
     width: 1px;
     height: 1px;
