responsive mobile footer
responsive mobile till 520px

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,29 +1,33 @@
-<footer>
+<footer class="footer">
+  <div class="footer__block container">
+    <ul>
+      <li class="footer__slogan-item">
+        <p class="footer__slogan-text">homemade ice cream made</p>
+      </li>
+      <li class="footer__slogan-item">
+        <p class="footer__slogan-text footer__slogan-text--second">with passion</p>
+      </li>
+    </ul>
 
-  <ul>
-    <li class="">
-      <p class="">homemade ice cream made</p>
-    </li>
-    <li class="">
-      <p class="">with passion</p>
-    </li>
-  </ul>
+    <ul class="footer__soc-list footer__soc-list--top">
+      <li class="footer__soc-item"><a class="" href=""><svg class="footer__soc-icon" width="32" height="32">
+            <use href="./images/symbol-defs.svg#icon-footer-github"></use>
+          </svg></a></li>
+      <li class="footer__soc-item"><a class="" href=""><svg class="footer__soc-icon" width="32" height="32">
+            <use href="./images/symbol-defs.svg#icon-footer-telegram"></use>
+          </svg></a></li>
+      <li class=""><a class="" href=""><svg class="footer__soc-icon" width="32" height="32">
+            <use href="./images/symbol-defs.svg#icon-footer-facebook"></use>
+          </svg></a></li>
+    </ul>
 
-  <ul>
-    <li class=""><a class="" href=""><svg width="32" height="32">
-          <use href="./images/symbol-defs.svg#icon-footer-github"></use>
-        </svg></a></li>
-    <li class=""><a class="" href=""><svg width="32" height="32">
-          <use href="./images/symbol-defs.svg#icon-footer-telegram"></use>
-        </svg></a></li>
-    <li class=""><a class="" href=""><svg width="32" height="32">
-          <use href="./images/symbol-defs.svg#icon-footer-facebook"></use>
-        </svg></a></li>
-  </ul>
+    <address class="footer__address footer__address--top">Feel free to contact<a class="footer__tel"
+        href="tel:+61(0)383766284"> +61 (0) 383
+        766 284</a>
+    </address>
 
-  <address><a href="tel:+61s(0)383766284"></a>Feel free to contact +61 (0) 383 766 284</address>
 
-  <p>© 2019 - IceCream.
+  </div>
+  <p class="footer__copyright">© 2019 - IceCream.
     All Rights Reserved. </p>
-
 </footer>
