--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -8,6 +8,7 @@ $animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .footer__block {
   padding: 82px 20px 25px;
+  max-width: 520px;
   width: 100%;
   height: 403px;
 }
