--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,8 +4,17 @@
     <h2 class="products__main-title">products</h2>
     <ul class="products">
         <li class="products__item products__item--pink">
-            <!-- <img src="/images/home-pic1.png" width="250px" height="250px" alt=""> -->
+            <picture>
+                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
+                                        <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
+                <source srcset="/images/products-mob1.png 1x , /images/products-mob1-2x.png 2x " media="(min-width: 320px)">
+            <img src="/images/products-mob1.png" alt="" class="products__photo">
+            </picture>
+            
             <h3 class="products__title">ice cream</h3>
+            <svg class="products__icon">
+                <use href="/images/symbol-defs.svg#icon-points"></use>
+            </svg>
             <p class="products__paragraph">Ice CREAM - Ice cream is a frozen dessert made mainly from milk, cream, butter, sugar with the addition of flavors and
             odors.
             Ice cream can also be fruit (based on the juice and pulp of fruits and berries).</p>
@@ -16,7 +25,17 @@
 </button>
         </li>
         <li class="products__item products__item--yellow">
+            <picture>
+                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
+                            <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
+                <source srcset="/images/products-mob2.png 1x , /images/products-mob2-2x.png 2x " media="(min-width: 320px)"> 
+ <img src="/images/products-mob2.png" alt="" class="products__photo">
+            </picture>
+                       
             <h3 class="products__title">ice coffee</h3>
+            <svg class="products__icon">
+                <use href="/images/symbol-defs.svg#icon-points"></use>
+            </svg>
             <p class="products__paragraph">Cold coffee or Ice coffee, ice coffee - a way to serve coffee drinks. It is often used as a soft drink. </p>
 <button type="button" class="products__btn">
     <svg class="next-btn">
@@ -25,7 +44,17 @@
 </button>
         </li>
         <li class="products__item products__item--green">
+            <picture>
+                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
+                <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
+                <source srcset="/images/products-mob3.png 1x , /images/products-mob3-2x.png 2x " media="(min-width: 320px)"> 
+                                 <img src="/images/products-mob3.png" alt="" class="products__photo">  
+                                 </picture>
+
             <h3 class="products__title">milkshakes</h3>
+            <svg class="products__icon">
+                <use href="/images/symbol-defs.svg#icon-points"></use>
+            </svg>
             <p class="products__paragraph">Milkshake - a dessert drink based on milk and ice cream. To give the cocktail different flavors, it is added syrups,
             jams, fruits, whipped cream, creams, grated chocolate and more. food ingredients. Milkshakes include any cocktails made
             from dairy products, not just ice cream.</p>
