--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -8,6 +8,10 @@
     width: 320px;
   }
 
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
   @media screen and (min-width: 768px) {
     width: 768px;    
   }
