--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -41,8 +41,6 @@
         display: flex;
         flex-direction: column;
         background-color: $mobilebgMenu;
-        padding-left: 21px;
-        padding-right: 21px;
         padding-top: 23px;
         padding-bottom: 23px;
         width: 254px;
@@ -85,6 +83,7 @@
 
 .menu-close {
     margin-bottom: 23px;
+    margin-right: 21px;
 }
 
 .menu-button__icon {
@@ -120,8 +119,10 @@
     width: 160px;
     height: 44px;
     &.header-button--hide {
-        width: 100%;
+        width: 209px;
         margin-bottom: 21px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     @media screen and (max-width: 767px) {
@@ -155,6 +156,12 @@
 
 .header-list__item {
     height: 40px;
+
+    @media screen and (max-width: 1279px) {
+        border-top: 1px solid #E18298;
+        border-bottom: 1px solid #E18298;
+    }
+
     @media screen and (min-width: 1280px) {
         &:not(:last-child) {
             margin-right: 35px;
@@ -169,6 +176,10 @@
     display: block;
     padding-top: 11px;
     padding-bottom: 11px;
+
+    @media screen and (max-width: 1279px) {
+        margin-left: 21px;
+    }
 
     @media screen and (min-width: 1280px) {
         @include fonts(16px, 20.83px, 700, 0.03em);
