--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,10 +8,13 @@
 }
 
 .header-box {
-    position: absolute;
-    left: 50%;
-    top: 0;
-    transform: translate(-50%, 0) scale(1);
+    @media screen and (min-width: 480px) {
+        position: absolute;
+        left: 50%;
+        top: 0;
+        transform: translate(-50%, 0) scale(1);
+    }
+    
 
     display: flex;
     align-items: center;
@@ -43,11 +46,12 @@
         background-color: $mobilebgMenu;
         padding-top: 23px;
         padding-bottom: 23px;
-        width: 254px;
+        width: 100vw;
         height: 100vh;
         @media screen and (min-width: 480px) {
             width: 254px;
         }
+
         transform: translateX(100vw);
         transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
         &.is-open {
