делает статическую часть секции

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,19 +1,55 @@
-<section class="section">
+<section class="customer-review">
     <div class="container">
         <picture> 
             <source srcset="/images/customer-emily_1x.webp" type="image/webp">    
             <img src="/images/customer-emily_1x.jpg" alt="girl-with-curly-hair" class="customer-img">
-            
+          
         </picture>
         <div class="review-article-container">
             <article class="review-article review-article--before"> 
-                <!-- <svg class="customer-quotes">
+                <svg class="customer-quotes">
                     <use href="/images/symbol-defs.svg#icon-ustomer-quotes"/> 
-                </svg> -->
+                </svg>
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
             </article>
         </div>
-        
+        <div class="slider-container">
+            <ul class="dots">
+                <li class="dots__item">
+                    <svg class="dots__icon">
+                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                    </svg>
+                </li>
+                <li class="dots__item">
+                    <svg class="dots__icon">
+                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                    </svg>
+                </li>
+                <li class="dots__item">
+                    <svg class="dots__icon">
+                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                    </svg>
+                </li>
+            </ul>
+            <p class="customer-name">Emily, Los Angeles</p>
+            <ul class="slider-dots">
+                <li class="slider-dots__item">
+                    <svg class="slider-dots__icon">
+                        <use href="/images/symbol-defs.svg#icon-home"/>
+                    </svg>
+                </li>
+                <li class="slider-dots__item">
+                    <svg class="slider-dots__icon">
+                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                    </svg>
+                </li>
+                <li class="slider-dots__item">
+                    <svg class="slider-dots__icon">
+                        <use href="/images/symbol-defs.svg#icon-Ellipse-5"/>
+                    </svg>
+                </li>
+            </ul>
+        </div>
     </div>
 
 
