--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -1,6 +1,13 @@
+.customer-review{
+    background-color: #ffffff;
+    padding-bottom: 86px;
+}
+
 .review-article-container{
-    background-color: #FAFAFA;
-    padding: 43px 50px 26px 50px;
+    // background-color: #FAFAFA;
+    padding: 0 50px;
+    padding-top: 43px;
+    margin-bottom: 30px;
     
 }
 
@@ -10,25 +17,81 @@
     text-align: center;
     padding-left: 7px;
     position: relative;
+    z-index: 1;
     padding-right: 16px;
     background-image: repeating-linear-gradient(transparent, transparent 28px, #E1E1E1 28px, #E1E1E1 29px, transparent 29px, transparent 59px, #E1E1E1 59px, #E1E1E1 60px);
 }
 
-.review-article--before::before{
-    content: url(../images/symbol-defs.svg#icon-ustomer-quotes);
-    position: absolute;
+.customer-quotes{
     width: 67px;
     height: 55px;
-    z-index: 1000;
-    top: 20px;
-    left: 61px;
-    fill: #E1E1E1;
+    position: absolute;
     
+    z-index: -1;
+    top: -22px;
+    left: 4px;
+    fill: #E1E1E1;
 }
 
 .customer-img{
     width: 85px; 
     margin: 0 auto;
+    margin-bottom: 29px;
 }
 
+.dots{
+    margin-bottom: 18px;
+    text-align: center;
+}
+
+.dots__item{
+    display: inline-block;
+    width: 4px;
+    height: 4px;
+    & + &{
+        margin-left: 10px;
+    }
+}
+
+.dots__icon{
+    width: 100%;
+    height: 100%;
+    fill: #c7133e;
+}
+
+.slider-container{
+    margin: 0 auto;
+}
+
+.customer-name{
+    text-align: center;
+    @include fonts(14px, 26px, 500);
+    margin-bottom: 30px;
+}
+
+.slider-dots{
+    text-align: center;
+}
+
+.slider-dots__item{
+    width: 12px;
+    height: 12px;
+    & + &{
+        margin-left: 18px;
+    }
+    &:first-child .slider-dots__icon {
+        fill: #d31342;
+    }
+    display: inline-block;
+    
+}
+
+.slider-dots__icon{
+    width: 100%;
+    height: 100%; 
+
+    
+    fill: #D9D9D9;
+    
+}
 
