--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -4,9 +4,10 @@
 }
 
 .review-article-container{
-    // background-color: #FAFAFA;
+    background-color: #FAFAFA;
     padding: 0 50px;
     padding-top: 43px;
+    padding-bottom: 6px;
     margin-bottom: 30px;
     
 }
