--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,28 +1,110 @@
 .section {
     padding-bottom: 97px;
     background-color: $sectionbgColor;
+
+    @media screen and (min-width: 768px) {
+        padding-top: 66px;
+        padding-bottom: 140px;
+    }
+    @media screen and (min-width: 1280px) {
+        padding-top: 39px;
+        padding-bottom: 131px; 
+    }
 }
 .advantage-list {
     padding-left: 0;
     padding-right: 0;
+    @media screen and (min-width: 480px) {
+        display: flex;
+    }
+    @media screen and (min-width: 1280px) {
+        padding-left: 115px;
+        padding-right: 115px;
+        
+    }
 }
 .advantage-list__item {
     width: 230px;
     margin-bottom: 38px;
+    @media screen and (min-width: 480px) and (max-width: 767px) {
+        width: 180px;
+    margin-bottom: 0px;
+    max-width: 100%;
+        &:not(:last-child) {
+            margin-right: 60px;
+        }
+    }
+    @media screen and (min-width: 768px) {
+        width: 330px;
+        margin-bottom: 0px;
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+        
+    }
 }
 .advantage-list__icon {
     margin-bottom: 16px;
+    @media screen and (min-width: 768px) and (max-width: 1279px) {
+        margin-bottom: 36px;
+    }
+     @media screen and (min-width: 1280px) {
+         margin-bottom: 40px;
+     }
 }
+
 .advantage-list__title {
 font-family: Titan One;
 @include fonts(36px, 41px, 400, 0.04em);
 text-transform: uppercase;
 color: $accentColor;
 height: 50px;
+animation-name: pink-icons;
+animation-duration: 2s;
+animation-timing-function: linear;
+animation-direction: alternate;
+animation-iteration-count: infinite;
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+    margin-bottom: 13px;
+    @include fonts(48px, 55px, 400, 0.04em)
+}
+
+ @media screen and (min-width: 1280px) {
+     margin-bottom: 30px;
+     @include fonts(58px, 66px, 400, 0.04em);
+  
+ }
+
+}
+@keyframes pink-icons {
+    0% {
+        color: $mobilebgMenu;
+    }
+    // 25% {
+    //     color: $mobilebgMenu;
+    // }
+    50% {
+        color: $accentColor;
+    }
+    // 75% {
+    //     color: $hoverBtn;
+    // }
+    100% {
+        color: $pinkbgCircle;
+    }  
 }
 .advantage-list__text {
 font-weight: 700;
 font-size: 12px;
 line-height: 1.66;
 color: $secondaryTextColor;
+
+@media screen and (min-width: 768px) and (max-width:1279px) {
+font-size: 14px;
+line-height: 1.71;
+}
+@media screen and (min-width: 1280px) {
+    @include fonts(16px, 28px, 700, 0.02em);
+}
 }
