--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,20 +2,20 @@
   <div class="container">
     <h2 class="visually-hidden">Gallery</h2>
     <picture>
-      <!-- <source
-        srcset="./images/gallery_3x.jpg 1x, ./images/gallery_3x.webp 2x"
-        media="(min-width:1280px)"
+      <source
+        srcset="./images/gallery_desktop1x.jpg 1x, ./images/gallery_desktop2x.jpg 2x"
+        media="(min-width: 1280px)"
       />
       <source
-        srcset="./images/gallery_2x.jpg 1x, ./images/gallery_2x.webp 2x"
-        media="(min-width:768px)"
-      /> -->
+        srcset="./images/gallery_tablet1x.jpg 1x, ./images/gallery_tablet2x.jpg 2x"
+        media="(min-width: 768px)"
+      />
       <source
-        srcset="./images/gallery_1x.jpg 1x, ./images/gallery_1x.webp 2x"
-        media="(min-width:320px)"
+        srcset="./images/gallery_mob1x.jpg 1x, ./images/gallery_mob2x.jpg 2x"
+        media="(min-width: 320px)"
       />
       <img
-        src="./images/gallery_1x.jpg"
+        src="./images/gallery_mob1x.jpg"
         class="gallery__example-img"
         alt="Types of IceCream"
         width="100%"
