--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,28 +2,57 @@
   <div class="container">
     <p class="about__pre-title">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
-    <span class="about__image-cow"></span>
-    <div class="about__container">
-      <p class="about__text about__text_black">
-        Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
-        lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
-      </p>
-      <p class="about__text about__text_gray about__text_indent">
-        Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci
-        in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna
-        maximus. Cras massa nibh, <br />
-        tincidunt.
-      </p>
-      <p class="about__text about__text_gray">Aliquam erat volutpat. Aenean accumsan.</p>
-      <span class="about__image-milk">
-        <img src="/images/sectionbg1 1.png" alt="milk" width="320px" height="133px" />
-      </span>
-      <button type="button" class="about__button">
-        Read more
-        <svg class="about__button-icon" width="8" height="9">
-          <use href="/images/symbol-defs.svg#icon-about-arrow"></use>
-        </svg>
-      </button>
+    <div class="about-main-container">
+      <!-- <span class="about__image-cow"></span> -->
+      <picture>
+        <source
+          media="(min-width: 1280px )"
+          srcset="/images/about-cow-desktop.png 1x, /images/about-cow-desktop2x.png 2x"
+        />
+
+        <source
+          media="(min-width: 768px )"
+          srcset="/images/about-cow-tablet.png 1x, /images/about-cow-tablet2x.png 2x"
+        />
+        <source
+          media="(min-width: 320px )"
+          srcset="/images/about-cow-mobile.png 1x, /images/about-cow-mobile2x.png 2x"
+        />
+        <img src="/images/about-cow-mobile.png" alt="cow" width="280px" height="280px" />
+      </picture>
+      <div class="about__container">
+        <p class="about__text about__text_black">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
+          lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+        </p>
+        <p class="about__text about__text_gray about__text_indent">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci
+          in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna
+          maximus. Cras massa nibh, tincidunt.
+        </p>
+        <p class="about__text about__text_gray">Aliquam erat volutpat. Aenean accumsan.</p>
+        <span class="about__image-milk">
+          <picture>
+            <source
+              media="(min-width: 320px )"
+              srcset="/images/milk-bg-mobile.png 1x, /images/milk-bg-mobile2x.png 2x"
+              type="img/png"
+            />
+            <source
+              media="(min-width: 1280px )"
+              srcset="/images/milk-bg-destop.png 1x, /images/milk-bg-destop2x.png 2x"
+              type="img/png"
+            />
+            <img src="/images/milk-bg-destop.png" alt="milk" height="534" />
+          </picture>
+        </span>
+        <button type="button" class="about__button">
+          Read more
+          <svg class="about__button-icon" width="8" height="9">
+            <use href="/images/symbol-defs.svg#icon-about-arrow"></use>
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
 </section>
