Revert "исправляет мобильную версию"

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,13 +5,13 @@
     <ul class="products">
         <li class="products__item products__item--pink">
             <picture>
-                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)"> -->
-                                        <source srcset="/images/products-tab1.png 1x , /images/products-tab1-2x.png 2x " media="(min-width: 768px)">
+                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
+                                        <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
                 <source srcset="/images/products-mob1.png 1x , /images/products-mob1-2x.png 2x " media="(min-width: 320px)">
             <img src="/images/products-mob1.png" alt="" class="products__photo">
             </picture>
             
-           <h3 class="products__title">ice cream</h3>
+            <h3 class="products__title">ice cream</h3>
             <svg class="products__icon">
                 <use href="/images/symbol-defs.svg#icon-points"></use>
             </svg>
@@ -25,12 +25,13 @@
 </button>
         </li>
         <li class="products__item products__item--yellow">
-            <picture> 
-                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)"> -->
-                            <source srcset="./images/products-tab2.png 1x , ./images/products-tab2-2x.png 2x " media="(min-width: 768px)">
+            <picture>
+                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
+                            <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
                 <source srcset="/images/products-mob2.png 1x , /images/products-mob2-2x.png 2x " media="(min-width: 320px)"> 
  <img src="/images/products-mob2.png" alt="" class="products__photo">
             </picture>
+                       
             <h3 class="products__title">ice coffee</h3>
             <svg class="products__icon">
                 <use href="/images/symbol-defs.svg#icon-points"></use>
@@ -42,19 +43,18 @@
     </svg>
 </button>
         </li>
-        <li class="products__item products__item--green"> 
+        <li class="products__item products__item--green">
             <picture>
-                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)"> -->
-                <source srcset="./images/products-tab3.png 1x , ./images/products-tab3-2x.png 2x " media="(min-width: 768px)">
+                <!-- <source srcset="./images/img(2).jpg 1x , ./images/img1-2x.jpg 2x " media="(min-width: 1200px)">
+                <source srcset="./images/team-tab1.jpg 1x , ./images/team-tab1-2x.jpg 2x " media="(min-width: 768px)"> -->
                 <source srcset="/images/products-mob3.png 1x , /images/products-mob3-2x.png 2x " media="(min-width: 320px)"> 
                                  <img src="/images/products-mob3.png" alt="" class="products__photo">  
                                  </picture>
 
-        <h3 class="products__title">milkshakes</h3>
+            <h3 class="products__title">milkshakes</h3>
             <svg class="products__icon">
                 <use href="/images/symbol-defs.svg#icon-points"></use>
             </svg>
-            
             <p class="products__paragraph">Milkshake - a dessert drink based on milk and ice cream. To give the cocktail different flavors, it is added syrups,
             jams, fruits, whipped cream, creams, grated chocolate and more. food ingredients. Milkshakes include any cocktails made
             from dairy products, not just ice cream.</p>
@@ -62,7 +62,7 @@
                 <svg class="next-btn">
                     <use href="/images/symbol-defs.svg#icon-products-arrow"></use>
                 </svg>
-            </button> 
+            </button>
         </li>
     </ul>
 </div>
