--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -20,14 +20,6 @@
   margin-top: 15px;
   text-align: center;
 }
-.products {
-  @media screen and (min-width: 768px) {
-    display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // flex-direction: row;
-  }
-}
 .products__item {
   width: 100%;
   min-height: 485px;
@@ -40,12 +32,6 @@
   }
   padding: 160px 40px 40px 40px;
   position: relative;
-  @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 40px) / 3);
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-  }
 }
 .products__item--pink {
   background-color: $pinkbgСolor;
@@ -101,12 +87,6 @@
   position: absolute;
   width: 250px;
   height: 250px;
-  left: 50%;
   top: -113px;
-  transform: translate(-50%, 0) scale(1);
-  @media screen and (min-width: 768px) {
-    width: 220px;
-    height: 220px;
-    top: -102px;
-  }
+  left: 20px;
 }
