--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,8 +5,8 @@
         </svg>
         <div class="hero__content">
             <h1 class="hero__title">ice cream <br> made with <span>passion</span></h1>
-            <button type="button" class="hero__btn-left" data-modal-open>Products</button>
-            <button type="button" class="hero__btn-right" data-modal-open>How it’s made?</button>
+            <button type="button" class="hero__btn-left">Products</button>
+            <button type="button" class="hero__btn-right">How it’s made?</button>
         </div>
         <picture class="hero__icecream">
             <source media="(min-width: 480px)" srcset="/images/hero-icecream-mob.png 1x, /images/hero-icecream-mob@2x.png 2x"/>
