--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -59,6 +59,6 @@
     </div>
 </header>
 
-<script src="js/modal.js"></script>
+<!-- <script src="js/modal.js"></script>
 
-<script src="js/mobile-menu.js"></script>
+<script src="js/mobile-menu.js"></script> -->
