--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer__block container">
-    <ul>
+    <ul class="footer__slogan-list">
       <li class="footer__slogan-item">
         <p class="footer__slogan-text">homemade ice cream made</p>
       </li>
@@ -8,24 +8,25 @@
         <p class="footer__slogan-text footer__slogan-text--second">with passion</p>
       </li>
     </ul>
+    <aside class="footer__aside">
+      <ul class="footer__soc-list footer__soc-list--top">
+        <li class="footer__soc-item"><a class="footer__soc-link" href="https://github.com" target="blank"><svg
+              width="32" height="32">
+              <use href="./images/symbol-defs.svg#icon-footer-github"></use>
+            </svg></a></li>
+        <li class="footer__soc-item"><a class="footer__soc-link" href="https://telegram.com" target="blank"><svg
+              width="32" height="32">
+              <use href="./images/symbol-defs.svg#icon-footer-telegram"></use>
+            </svg></a></li>
+        <li><a class="footer__soc-link" href="https://facebook.com" target="blank"><svg width="32" height="32">
+              <use href="./images/symbol-defs.svg#icon-footer-facebook"></use>
+            </svg></a></li>
+      </ul>
 
-    <ul class="footer__soc-list footer__soc-list--top">
-      <li class="footer__soc-item"><a class="" href=""><svg class="footer__soc-icon" width="32" height="32">
-            <use href="./images/symbol-defs.svg#icon-footer-github"></use>
-          </svg></a></li>
-      <li class="footer__soc-item"><a class="" href=""><svg class="footer__soc-icon" width="32" height="32">
-            <use href="./images/symbol-defs.svg#icon-footer-telegram"></use>
-          </svg></a></li>
-      <li class=""><a class="" href=""><svg class="footer__soc-icon" width="32" height="32">
-            <use href="./images/symbol-defs.svg#icon-footer-facebook"></use>
-          </svg></a></li>
-    </ul>
-
-    <address class="footer__address footer__address--top">Feel free to contact<a class="footer__tel"
-        href="tel:+61(0)383766284"> +61 (0) 383
-        766 284</a>
-    </address>
-
+      <address class="footer__address">Feel free to contact
+        <a class="footer__tel" href="tel:+61(0)383766284">+61(0)383 766 284</a>
+      </address>
+    </aside>
 
   </div>
   <p class="footer__copyright">© 2019 - IceCream.
