--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -12,26 +12,31 @@ $iconColor: #fea5bb;
     display: flex;
     max-width: 768px;
   }
+  @media screen and (min-width: 768px) {
+    max-width: 1280px;
+  }
 }
 
 .footer__slogan-list {
   margin-bottom: 43px;
+  width: 232px;
   @media screen and (min-width: 768px) {
     width: 340px;
     margin-bottom: 91px;
   }
+  @media screen and (min-width: 1280px) {
+    width: 477px;
+    margin-bottom: 97px;
+  }
 }
 
 .footer__slogan-item {
-  max-width: 232px;
+  margin-bottom: 17px;
   @media screen and (min-width: 768px) {
-    max-width: 100%;
+    margin-bottom: 16px;
   }
-  &:first-child {
-    margin-bottom: 17px;
-    @media screen and (min-width: 768px) {
-      margin-bottom: 16px;
-    }
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 15px;
   }
 }
 
@@ -45,8 +50,10 @@ $iconColor: #fea5bb;
   color: #ffa5ba;
   @media screen and (min-width: 768px) {
     font-size: 26px;
-    line-height: 1.15;
     letter-spacing: 0.04em;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
   }
 }
 
@@ -57,6 +64,9 @@ $iconColor: #fea5bb;
   @media screen and (min-width: 768px) {
     font-size: 48px;
     letter-spacing: 0.06em;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
   }
 }
 
@@ -101,6 +111,9 @@ $iconColor: #fea5bb;
   @media screen and (min-width: 768px) {
     font-size: 14px;
   }
+  @media screen and (min-width: 768px) {
+    letter-spacing: 0.02em;
+  }
 }
 
 .footer__tel {
@@ -119,5 +132,9 @@ $iconColor: #fea5bb;
   @media screen and (min-width: 768px) {
     padding: 29px 0 18px;
     line-height: 1.86;
+    letter-spacing: 0.02em;
+  }
+  @media screen and (min-width: 768px) {
+    padding: 9px 0 10px;
   }
 }
