--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -164,6 +164,7 @@
 
 .contacts__timeday {
   font-family: DM Sans;
+  font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.83;
