--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -175,6 +175,7 @@
 
 .contacts__time {
   font-family: DM Sans;
+  font-size: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.83;
