--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
  <section class="contact contact-overlay">
-      <h2 class="visually-hidden">Фильтры</h1>
+      <h2 class="visually-hidden">Фильтры</h2>
       <div class="contacts container contacts-top">
         <div class="contacts__section">
           <p class="contacts__category">CAFE</p>
@@ -86,8 +86,9 @@
         </div>
       </div>
     </section>
+    
 
-    <section class="collaboration contacts-bottom"></section>
+    <div class="collaboration contacts-bottom">
     <ul class="collaboration__list">
       <li class="collaboration__item">
         <button class="collaboration__btn" type="button">Our Locations<svg class="collaboration__svg">
@@ -100,3 +101,5 @@
                 </svg></button>
       </li>
     </ul>
+  </div>
+    
