--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -29,22 +29,35 @@
   }
 }
 .products__item {
-  width: 100%;
   min-height: 485px;
   border-radius: 24px;
-  &:not(:first-child) {
-    margin-top: 130px;
-  }
-  &:nth-child(1) {
-    margin-top: 144px;
+  margin-right: auto;
+  margin-left: auto;
+
+  display: flex;
+
+  justify-content: space-between;
+
+  flex-direction: column;
+  @media screen and (max-width: 767px) {
+    width: 280px;
+    &:not(:first-child) {
+      margin-top: 130px;
+    }
+
+    &:nth-child(1) {
+      margin-top: 144px;
+    }
   }
   padding: 160px 40px 40px 40px;
   position: relative;
   @media screen and (min-width: 768px) {
+    width: 220px;
     flex-basis: calc((100% - 40px) / 3);
     &:not(:last-child) {
       margin-right: 20px;
     }
+    margin-top: 150px;
   }
 }
 .products__item--pink {
@@ -76,8 +89,6 @@
   width: 40px;
   height: 40px;
   display: flex;
-  align-items: center;
-  justify-content: center;
   border: none;
   cursor: pointer;
   border-radius: 50%;
