--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -9,7 +9,7 @@
                   </svg>
                </div>
                <h3 class="advantage-list__title">721</h3>
-               <p class="advantage-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+               <p class="advantage-list__text">First we take fresh milk from cows that will feed on alpine meadows.</p>
                
             </li>
             <li class="advantage-list__item">
@@ -19,7 +19,7 @@
                   </svg>
                </div>
                 <h3 class="advantage-list__title">16<span>kg</span></h3>
-               <p class="advantage-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+               <p class="advantage-list__text">Then we add fresh, organic fruits to the milk.</p>
                
             </li>
             <li class="advantage-list__item">
@@ -29,7 +29,7 @@
                   </svg>
                </div>
                 <h3 class="advantage-list__title">84</h3>
-               <p class="advantage-list__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+               <p class="advantage-list__text">As a result, we have a delicious milk-fruit ice cream.</p>
             </li>
         </ul>
     </div>
