--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -5,6 +5,7 @@ $iconColor: #fea5bb;
 }
 
 .footer__block {
+  width: 100%;
   max-width: 480px;
   padding-top: 50px;
 
@@ -89,6 +90,12 @@ $iconColor: #fea5bb;
 
 .footer__soc-item {
   margin-right: 28px;
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
+  }
+  @media screen and (min-width: 1080px) {
+    margin-right: 25px;
+  }
 }
 
 .footer__soc-link {
