добавляет стили и разметку героя

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,18 +1,45 @@
 <section class="hero">
-    <div class="container">
+    <div class="container hero__box">
         <svg class="hero__bg-circle">
             <use href="images/symbol-defs.svg#icon-hero-circle"></use>
         </svg>
         <div class="hero__content">
-            <h1 class="hero__title">ice cream <br> made with <span>passion</span></h1>
-            <button type="button" class="hero__btn-left">Products</button>
-            <button type="button" class="hero__btn-right">How it’s made?</button>
+            <h1 class="hero__title">ice cream made with <span>passion</span></h1>
+            <a href="#products" class="hero__btn-left">Products</a>
+            <a href="#about" class="hero__btn-right">How it’s made?</a> 
+        </div>
+        <picture class="hero__milk">
+            <source media="(min-width: 1280px)" srcset="/images/hero-milk-desk.png 1x, /images/hero-milk-desk@2x.png 2x" />
+            <source media="(min-width: 768px)" srcset="/images/hero-milk-tab.png 1x, /images/hero-milk-tab@2x.png 2x" />
+            <img src="/images/hero-milk-desk.png" alt="mug of milk" width="188" height="191" />
+        </picture>
+        <div class="hero__inform">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+            <button type="button" class="hero__btn-expand">
+                <svg class="hero__icon">
+                    <use href="images/symbol-defs.svg#icon-products-arrow"></use>
+                </svg>
+            </button>
         </div>
         <picture class="hero__icecream">
-            <source media="(min-width: 480px)" srcset="/images/hero-icecream-mob.png 1x, /images/hero-icecream-mob@2x.png 2x"/>
-            <source media="(min-width: 768px)" srcset="/images/hero-icecream-tab.png 1x, /images/hero-icecream-tab@2x.png 2x"/>
             <source media="(min-width: 1280px)" srcset="/images/hero-icecream-desk.png 1x, /images/hero-icecream-desk@2x.png 2x"/>
+            <source media="(min-width: 768px)" srcset="/images/hero-icecream-tab.png 1x, /images/hero-icecream-tab@2x.png 2x"/>
+            <source media="(min-width: 480px)" srcset="/images/hero-icecream-mob.png 1x, /images/hero-icecream-mob@2x.png 2x"/>
             <img src="/images/hero-icecream-desk.png" alt="ice cream cone" width="170" height="410"/>
+        </picture>
+        <ul class="representation-list">
+            <li class="representation-list__title"><p class="representation-list__text"><span>16</span> cafes</p><svg class="representation-list__icon">
+                <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
+            </svg></li>
+            <li class="representation-list__title"><p class="representation-list__text"><span>23</span> food trucks</p><svg class="representation-list__icon">
+                <use href="images/symbol-defs.svg#icon-hero-ellipse"></use>
+            </svg></li>
+        </ul>
+        <picture class="hero__client">
+            <source media="(min-width: 1280px)"
+                srcset="/images/hero-girl-desk.png 1x, /images/hero-girl-desk@2x.png 2x" />
+            <source media="(min-width: 768px)" srcset="/images/hero-girl-tab.png 1x, /images/hero-girl-tab@2x.png 2x" />
+            <img src="/images/hero-girl-desk.png" alt="girl eating ice cream" width="293" height="232" />
         </picture>
     </div>
 </section>
